# quicsend

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION.md  MANIFEST.in  README.md  build-wheels.sh  install.sh  setup.py  update_pip.sh
include/: quicsend_client.hpp  quicsend_python.h  quicsend_quiche.hpp  quicsend_server.hpp  quicsend_tools.hpp
python_src/quicsend/: __init__.py  quicsend_wrapper.py
src/: python_module.cpp  quicsend_client.cpp  quicsend_python.cpp  quicsend_quiche.cpp  quicsend_server.cpp  quicsend_tools.cpp
tests/: test_client.cpp  test_client.py  test_server.cpp  test_server.py
